--- a/Testimonials.mw
+++ b/Testimonials.mw
@@ -15,11 +15,11 @@
 
 ----
 
-*"''As a developer I always thought of implementing programs doing the stuff I need on a mobile. Starting with Symbian on a se910i i was lost. Using java gave a little more freedom but no access to important stuff. The greenphone was the first Linux-driven phone where I could do what I wanted but development was a pain because Trolltech did not release information on a important thinks like certain ioctls of kernel drivers, the build system and so on - in fact the Greenphone is advertising for their Qtopia. Now with the Neo1973 (and I am more interested in the Neo and system-daemons like gsmd than OpenMoko-GUI) it is now possible to do exactly what I thought of.''" '''M. Dietrich'''
+*"''As a developer I always thought of implementing programs doing the stuff I need on a mobile. Starting with Symbian on a se910i i was lost. Using java gave a little more freedom but no access to important stuff. The greenphone was the first Linux-driven phone where I could do what I wanted but development was a pain because Trolltech did not release information on a important thinks like certain ioctls of kernel drivers, the build system and so on - in fact the Greenphone is advertising for their Qtopia. Now with the Neo1973 (and I am more interested in the Neo and system-daemons like gsmd than Openmoko-GUI) it is now possible to do exactly what I thought of.''" '''M. Dietrich'''
 
 ----
 
-*"''Back in 2006, I moved from Windows XP onto Ubuntu and never looked back. Since then I've tried more than 15 different distributions and even a few BSDs. I was first turned onto OpenMoko after reading an article about it on the Linux Devices website but didn't get to excited about it since would not have what I needed for some time to come. Fast forward a year, and after having already tried to develop Java software for Google's Android on my one year old MacBook in Mac OS X (and failing almost epically), not to mention trying it on my Telus branded HTC Touch Vogue (P3050; I know, I know it's CDMA), I think it's time to see what I can do about getting OpenMoko running on current hardware (ARMv4 @ 400MHz, 256MB ROM, 128MB RAM, 2.8" QVGA resistive touchscreen, bluetooth 2.0 + EDR, 2.0MP CMOS camera, and support for up to 32GB microSDHC cards). Can't wait to play around with it on my Mac and my desktop workstation once I get Ubuntu 8.04 on them. Hope my contributions will help speed OpenMoko's development since Windows Mobile of any version is really lacking in almost every way right now.''" '''Nolan Haynes'''
+*"''Back in 2006, I moved from Windows XP onto Ubuntu and never looked back. Since then I've tried more than 15 different distributions and even a few BSDs. I was first turned onto Openmoko after reading an article about it on the Linux Devices website but didn't get to excited about it since would not have what I needed for some time to come. Fast forward a year, and after having already tried to develop Java software for Google's Android on my one year old MacBook in Mac OS X (and failing almost epically), not to mention trying it on my Telus branded HTC Touch Vogue (P3050; I know, I know it's CDMA), I think it's time to see what I can do about getting Openmoko running on current hardware (ARMv4 @ 400MHz, 256MB ROM, 128MB RAM, 2.8" QVGA resistive touchscreen, bluetooth 2.0 + EDR, 2.0MP CMOS camera, and support for up to 32GB microSDHC cards). Can't wait to play around with it on my Mac and my desktop workstation once I get Ubuntu 8.04 on them. Hope my contributions will help speed Openmoko's development since Windows Mobile of any version is really lacking in almost every way right now.''" '''Nolan Haynes'''
 [[Category:User]]
 [[Category:Ideas| ]]
 [[Category:Software ideas]]
