--- a/Translation_HOWTO%2Fru.mw
+++ b/Translation_HOWTO%2Fru.mw
@@ -23,6 +23,6 @@
 Рассылка openmoko-dev, вероятно, отличное место для встречи всех локализаторов, также можно отмечать заголовки писем, например, тэгом [i18n].
 : это несколько противоречит сложившейся на данный момент ситуации. '''пожалуйста, пока присоединяйтесь к рассылке сообщества.''' также идут переговоры о создании рассылки для переводчиков [http://wiki.openmoko.org/wiki/Talk:Translation#Need_for_translation_mailing_list_.28and_coordinators.3F.29 тут] [http://lists.openmoko.org/pipermail/community/2007-April/004973.html и тут: OM-i18n-ml] (я только что написал в рассылку сообщества: '''не стесняйтесь участвовать в обеих дискуссиях''' ). [[User:Cga|cga]] sat apr 28th 20:48:35 CEST 2007)
 
-== Список файлов PO, связанных с OpenMoko ==
+== Список файлов PO, связанных с Openmoko ==
 Программы в /home/moko/sources/svn/ и /home/moko/openmoko/trunk/src/target/OM-2007/applications/ большей частью пока не имеют файлов *.pot, но у некоторых из них есть файлы *.po для определенных языков.
 {{Languages|Translation_HOWTO}}
