--- a/Ts_calibrate.mw
+++ b/Ts_calibrate.mw
@@ -1,6 +1,6 @@
 '''''ts_calibrate''''' is a graphical tool to calibrate the touch sensor.  The app asks the user to tap a sequence of 5 cross-hairs with a stylus.  It recalibrates the touchscreen, then exits.
 
-As of August 2007, it is typically included in the OpenMoko root filesystem, but does not appear  in the graphical menus.  You can run it from an [[ssh]] or [[GTKTerm2]] command line.
+As of August 2007, it is typically included in the Openmoko root filesystem, but does not appear  in the graphical menus.  You can run it from an [[ssh]] or [[GTKTerm2]] command line.
 
 It is a C program, ts_calibrate.c, and appears to be part of the [[xcalibrate]] package.
 
