--- a/UI_Improvements.mw
+++ b/UI_Improvements.mw
@@ -224,7 +224,7 @@ A plain old dialpad like any other phone would be a nice fallback.
 
 ===Towards OpenGL compositing===
 
-There are [http://www.hbmobile.org/wiki/index.php?title=GUI_Frameworks lots of possible GUI frameworks] with various software architectures that could be used for OpenMoko.
+There are [http://www.hbmobile.org/wiki/index.php?title=GUI_Frameworks lots of possible GUI frameworks] with various software architectures that could be used for Openmoko.
 
 GTA01 hardware uses GTK+/matchbox without hardware acceleration, and it's not enough: this is a first that a mobile Linux device has such a high DPI resolution. OpenGL ES compositing seems to have a bright future on embedded devices, because compositing seems to give natural zooming interfaces reality (at last!).
 
@@ -353,7 +353,7 @@ The same, but for the wheel. It can be very short to do: you don't have 1:1 anym
 ===Left-handed UI Support===
 
 ====Description====
-A discussion on the community list identified a desire to have the ability to switch the OpenMoko UI into "left-handed" mode.  
+A discussion on the community list identified a desire to have the ability to switch the Openmoko UI into "left-handed" mode.  
 
  The main problem is scrollbars, when they're on the right, dragging  
  the scrollbar left handed results in your hand covering the screen so  
