--- a/Neo_FreeRunner_Hardware.mw
+++ b/Neo_FreeRunner_Hardware.mw
@@ -6,18 +6,201 @@ __NOEDITSECTION__
 
 <!-- {{note|This page is about hardware that is currently in '''design/prototype''' phase, changes are frequent}} -->
 
+[[Image:Gta02a5 pcba cs.JPG|thumb|400px|display (top) side NOTE: GTA02 A5 PCBA Component Side photo]]
+[[Image:Gta02a5 pcba ps.JPG|thumb|400px|component (back) side NOTE: GTA02 A5 PCBA Print Side photo]]
+[[Image:GTA02 A5 PCB CS.jpg|thumb|400px|component (back) side NOTE: GTA02 A5 PCB Component Side photo]]
+[[Image:GTA02 A5 PCB PS.jpg|thumb|400px|component (back) side NOTE: GTA02 A5 PCB Print Side photo]]
+[[Image:SimpleComponentDiagram.jpg|thumb|400px|Simplified Hardware Component Diagram]]
+
 =Summary=
 Openmoko, Inc. is building a Linux based smart phone with full GPL compatible firmware source code for Openmoko, project code named GTA02 (Neo FreeRunner).
 
-Detailed hardware component selection can be found below. See also the [[Neo FreeRunner GTA02 Hardware Requirements]] used in making these component selections.
+Detailed hardware component selection can be found below.
 
-<gallery>
-Image:Gta02a5 pcba cs.JPG|component (back) side NOTE: GTA02 A5 PCBA Component Side photo
-Image:Gta02a5 pcba ps.JPG|display (top) side NOTE: GTA02 A5 PCBA Print Side photo
-Image:GTA02 A5 PCB CS.jpg|component (back) side NOTE: GTA02 A5 PCB Component Side photo
-Image:GTA02 A5 PCB PS.jpg|display (top) side NOTE: GTA02 A5 PCB Print Side photo
-Image:SimpleComponentDiagram.jpg|Simplified Hardware Component Diagram
-</gallery>
+=Features=
+*Display-   Topply o2.8, 480 x 640 pixels, VGA, 200 NIT minimum, resistance type touch 
+
+*User Interface Navigation- Touch screen on LCD, 2 control “buttons”, 1 Power button, 1 Aux for 911 emergency call  
+
+*Built-in 802.11b/g Radio (Atheros chipset AR6001 Flash version) 
+
+*Built-in Bluetooth 2.0 + EDR (CSR and support PCM audio , BC4 frimware version) 
+
+*Built-in 2D/3D graphics acceleration chip (S-Media 3362) 
+
+*2 built-in Tri-Axis sensors (ST accelerometer LIS302DL) 
+
+*Built in GPS Radio – -130 dBm with internal antenna, -157 dBm tracking on chipset specification, TTFF under 40 seconds with -130 dBm signal strength, and tracking (u-Blox) 
+
+*Antenna – Specialized antenna for best in hand hold GPS, GPRS and Wi-Fi/Bluetooth performance are required, -105dBm on receiving, Tx 30dbm+2 on GSM 
+
+*External Antennae –   MMCX GPS connector 
+
+*GPRS Radio –GSM/GPRS radio.  A Pre-PTCRB certified module will be preferred 
+
+*Linux – Linux kernel 2.6.24 or later Openmoko kernel 
+
+*USB -  Client and Host mode switch-able (to be used for software downloading), provide host 5V power 
+
+*Power- Normal mode power will be via 1200 mAh battery with built-in coulomb counter, could charge via specialized charger.  Internal Lithium Ion or Lithium Polymer battery will keep device in standby mode. Battery life (Approximation/Ideal Target) Standby time 150-200 Hrs (GSM) Talk time (Backlight off) Up to 3-4 hrs(GSM) 
+
+*LED- LED indicator under Aux/Power button key
+
+=Hardware Specification=
+===Hardware Electrical=== 
+
+*400/500 MHz Samsung 2442B Processor/SOC (400 minimum, ARM920T core, ARMv4T)
+*Boot code in NAND FLASH or 2MB NOR FLASH (optional design)
+*128 MB SDRAM total, 64 MB CPU internal, 64 MB external 
+*256MB NAND Flash MCP package. 
+
+=== Display ===  
+*Topploy VGA ; 2.8” diagonal, 480 x 640 pixels, 16 bit color depth
+*Transmissive display: good readability in high ambient light is essential 
+*White LED backlight.  Required brightness is 200 NIT minimum. 
+*Resistance type touch panel.
+
+=== WiFi 802.11 b/g transceiver ===  
+*Must have GPL support source or GPL compatible policy
+*TX power at 11 Mbps: 13 dBm minimum  
+*RX sensitivity at 11 Mbps: -89 dBm desired, -83 dBm minimum 
+*AP mode desirable, not required 
+*WEP and WPA supported 
+*Atheros preferred because it's GPL policy
+
+=== Serial interfaces (UART) ===
+*Three serial interfaces are required   
+*Console  
+*A-GPS or GPS
+*GSM/GPRS
+
+=== Accelerometer ===
+* 2x accelerometer required
+* Could support interrupt while suspend or power save mode
+* 3 axis sensing
+
+=== A-GPS === 
+*GPS chipset receiver and antenna 
+*Sensitivity at Antenna port: -157 dBm tracking on chipset specification
+*LNA and SAW filter for maximum interference protection
+*Cold start time to first fix: 40 sec typical at -130 dBm, 60 sec max
+*Must support GPL for Assist-GPS function with open API
+*Industry quality GPS 
+*Could fit in GTA01 GPS area on the PCB
+
+=== GPS Antenna Performance === 
+*Antenna is passive and internal; 15 mm x 15 mm ceramic patch is nominal design 
+*Antenna LNA and SAW filter are required to meet GPS performance 
+*15 mm square ground plane (minimum 1 mm ground border around patch) (TBA) 
+*There will be one external GPS antenna connector (MMCX)
+*C/N ratio should higher than 35 on production testing
+
+=== Buttons === 
+*Touch screen over LCD is primary data entry mechanism 
+*Two “hard” buttons: Power button (on side of Neo1973) is a mechanical switch actuated by a plastic pushbutton in a hole in the housing.  Aux (911) button on the top of the device, All two of these buttons, when pushed by the operator, are binary inputs (on/off or pressed/not pressed) to the software.  The effect of each button is determined by the application software in the device  
+*Buttons may need to be backlit
+*50000 cycles on hardware specification 
+
+=== Sound outputs === 
+*Speaker in box (need good volume and acoustic behavior in noisy environments)
+*Audio is monophonic*Max volume: 100 dB at 5 cm to assure good performance in environment.
+*Support earphone with mic by jack
+
+=== Power Design Requirements===
+*Software based power management unit preferred
+*NXP PCF series preferred
+*Need support charge from USB function
+*Need support powered by USB function
+*Power switch:  Neo1973 will have a power switch, for power on/off and suspend 
+* Power/Aux switch must be backlit 
+*Switch controls whether device is running or suspended by presses of the switch 
+*Switch does not shut off the power; it only suspends/resumes the device 
+*Internal Li-Ion or Li-Polymer battery is included.  This battery supplies standby power to the device eliminates the rebooting of the device when local power is again reapplied.  Battery is 1200 ma-hr. 
+*Battery life (Approximation) Ideal/Target Standby time 150-200 Hrs (GSM) Talk time (Backlight off) Up to 4 hrs(GSM) 
+*Estimated current draw for the entire device when in suspend mode (and ALL peripherals are turned off or set for deep sleep) is <5 mA at 3.6 volts (Li-Ion terminal voltage).
+*GSM module deep sleep(alive and keep contact with base station) stage should take less than 8mA
+*Battery will reach half capacity (~600 mAh) with 500 charge-discharge cycles.  This will occur in less than 2 years of daily service. 
+*When powered continuously, Neo1973 must suspend (to low power mode) based either on observed low battery voltage condition or a configurable time delay. 
+*Neo1973 must monitor battery status while suspended and resume automatically if the charger is inserted.   
+*Primary power connection: 1200mAh battery 
+*USB charger have ID pin 47.5k pull down for Openmoko identification  
+*Indicators: an LED indicator visible from the side of the unit will illuminate when charging or have missing incoming call
+
+=== GSM/GPRS ===
+*850/1800/1900 and 900/1800/1900 MHz bands must be supported 
+*Design should allow for multi-band version (850/900 MHz) 
+*Module based GPRS transceiver could meeting PTCRB and appropriate FCC certifications.  It preferred that the module be pre-certified with PTCRB or OTA test 
+*FCC/CE certification required for GSM/GPRS part 
+
+=== GSM-GPRS Antenna Performance === 
+*-105 dBm receiving on each channel (GSM/PCS) 
+*30+2 dBm transmission on GSM channel 
+
+=== Wi-Fi Modules ===
+*Must support GPL driver
+*Atheros AR6k preferred
+*Flash version required
+
+=== Wi-Fi Antenna Performance === 
+*The  Wi-Fi antenna with TX 13 to 15 dBm
+*RX -89 to -83 dBm @802.11b 11Mbps or an equivalent performance antenna 
+
+=== Bluetooth ===
+*CSR BC4 or later solutions
+
+=== USB === 
+*Neo FreeRunner GTA02 will have USB, client/host.  Using USB 1.1    
+*Provides USB host 5v power
+*Could be powered by USB
+
+=== Microphone === 
+1 microphone is in the device 
+
+=== Firmware Image ===
+*Using Linux 2.6.24 or later
+*Could support boot from NAND or Boot from NOR
+*Shipping image should come with basic phone function
+*Could do full firmware upgrade by USB cable
+
+=== PSN ===
+*Device will have a PSN (product serial number) printed on the product label and machine readable in system NAND memory
+
+=== IMEI ===
+*Production phase should have IMEI code written
+
+= Package Specification = 
+*Weight: ~133 grams with battery. 
+*4 in 1 laser pen passed RoHs and safty regulation for laser equipment safty
+*1x 512MB microSD Card (SanDisk/Transcend)
+*1x USB cable Standard A to mini-B connector
+*1x 1200mAh smart/gauge battery
+*Quick start guide 
+*5v USB power cord w/100-240 switchable power plug 
+*Safety card, warranty card
+*Package could pass 1m to 1.5m drop test
+*AC USB charger,100v-240v, Passed UL and all required safety regulation
+*Must pass FCC/CE certification
+*Must pass NCC certification for Taiwan import regulation
+*RoHS Compatible
+*WEEE Report required
+
+= Life Cycle Specification = 
+
+=== Product Life === 
+The product is designed to last a minimum of 2 years. 
+
+=== Operating Temperature === 
+*Target operating range is –10°C to +60°C 
+
+=== Storage Temperature === 
+*-15 deg C to +70 deg C  
+
+=== ESD === 
+The device can withstand a 4.0kV contact discharge and  8.0kV air  
+
+=== Drop test ===
+Should pass 1m direct drop to concrete ground or 1.5m on slide with carpet
+
 
 = GTA02 Hardware Component Selection =
 
@@ -27,11 +210,16 @@ Image:SimpleComponentDiagram.jpg|Simplified Hardware Component Diagram
 
 == Main components ==
 === Processor ===
-The main Processor (CPU) is a [[Samsung S3C2442B B54]] (running at 400 MHz)
+The main Processor (CPU) of the Neo1973 GTA02 is a [[Samsung S3C2442B B54]] (running at 400 MHz)
 
-GPIO Assignments: https://svn.openmoko.org/trunk/doc/hardware/GTA02v4/gpio.txt
-
-{{:Samsung S3C2442B B54}}
+* Product Homepage: [http://www.samsung.com/global/business/semiconductor/productInfo.do?fmly_id=229&partnum=SC32442 Samsung SC32442B]
+* User Manual: [http://210.118.57.197/Products/Semiconductor/MobileSoC/ApplicationProcessor/ARM9Series/SC32442/um_s3c2442b_rev12.pdf Samsung SC32442B]
+* Core: ARM920T
+* Instruction Set: ARMv4
+* Built-in 64MB SDRAM
+* Built-in 256 MB NAND
+* GPIO Assignments: https://svn.openmoko.org/trunk/doc/hardware/GTA02v4/gpio.txt<br>
+* Evaluation board: [http://www.meritech.co.kr/products/product_view.php?num=52 S3C2442 EVB]
 
 === Power Management ===
 A NXP PCF50633 04 N3 is used for [[Neo1973_Power_Management|power management]].
@@ -71,7 +259,7 @@ The [[GSM]] (including GPRS) modem is Texas Instruments Calypso based.
 
 * Connected to: S3C2442 UART1 (full-uart, RxD, TxD, CTS, RTS), /dev/ttySAC0 in userspace
 * PM Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-power_control.patch
-* [[External GSM Antenna|Accessible GSM/GPRS antenna jack]] (if battery cover is removed) - MURATA MM8430-2610RB3 SMD RF TEST PORT. FOr compatible adapter see Murata part no. MXHS83QE3000<br>
+* Accessible GSM/GPRS antenna jack (if battery cover is removed)<br>
 
 === CALYPSO ASIC digital baseband ===
 Unfortunately we cannot provide many details on the GSM chipset due to very tight [http://en.wikipedia.org/wiki/Non-disclosure_agreement NDA]s.  However, this is not neccessarily required, since it interfaces using a standard UART serial line with the S3C2442.  On that interface, [http://www.3gpp.org/ftp/Specs/archive/07_series/07.05/ GSM 07.05], [http://www.3gpp.org/ftp/Specs/archive/07_series/07.10/ GSM 07.10] and other standardized protocols are used.
@@ -91,9 +279,11 @@ The legality of reading these files may vary according to your local laws, as ma
 GPRS Class12/CS4 <br>
 
 == AGPS ==
-[[u-blox ANTARIS 4 ATR0635]] chip
+u-blox ANTARIS 4 chip
 * Connected to: S3C2442 UART2, /dev/ttySAC1 in userspace
-{{:u-blox ANTARIS 4 ATR0635}}
+* Driver: none needed, talks standard NMEA
+* u-blox Antaris 4 Protocol [http://www.u-blox.com/customersupport/antaris_doc.html Protocol download page]
+* ATR0635 Datasheet: [http://www.u-blox.com/products/Data_Sheets/ATR0630_35_SglChip_Data_Sheet(GPS.G4-X-06009).pdf u-blox ATR0635]<br>
 
 == Accelerometers ==
 Two ST LIS302DL
@@ -124,7 +314,7 @@ The GTA02 has one microSD aka Transflash slot. Using the Glamo 3362 MMC/SD contr
 Toppoly (tpo) 2.8" diagonal (1.7" x 2.27" - 43mm x 58mm) 480x640 TD028TTEC1 module, using a Toshiba JBT6K74 TFT 
 LCD Driver Chipset.<br>
 * Homepage: [http://www.tpo.biz/ENG/business-eng/Activer-Matrix-VGA.htm Activer-Matrix-VGA.htm]
-* Specification: http://www.cip.physik.uni-muenchen.de/~Wolfgang.Draxinger/stuff/openmoko/TD028TTEC1.pdf
+* Specification: FIXME
 * Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-jbt6k74.patch
 * Backlight Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-backlight.patch
 * Connected to: Glamo3362 LCM interface and Glamo3362 SPI Interface<br>
@@ -402,17 +592,17 @@ The kernel exports the system_rev variable in /proc/cpuinfo as "Revision :" line
 *For US Import
 ** 850/1800/1900 Band, FCC ID: EUNGTA02
 ** 900/1800/1900 Band, FCC ID: EUNGTA02E
-** [http://people.openmoko.org/openmoko/certificate/gta/gta02/certificate/EUNGTA02_850_1800_1900/ FCC test report(GTA02)]
-** [http://people.openmoko.org/openmoko/certificate/gta/gta02/certificate/EUNGTA02E_900_1800_1900/ FCC test report(GTA02E)]
+** [http://people.openmoko.org/tony_tu/GTA02/certificate/EUNGTA02_850_1800_1900/ FCC test report(GTA02)]
+** [http://people.openmoko.org/tony_tu/GTA02/certificate/EUNGTA02E_900_1800_1900/ FCC test report(GTA02E)]
 
 == CE ==
 *For Europe
 **Registration number: M528583V-EO
-**[http://people.openmoko.org/openmoko/certificate/gta/gta02/certificate/CE CE report and certificate]
+**[http://people.openmoko.org/tony_tu/GTA02/certificate/CE/ CE report and certificate]
 
 == NCC ==
 *For Taiwan Import
 **NCC certification number: CCAF08DG0080T0 
-**[http://people.openmoko.org/openmoko/certificate/gta/gta02/certificate/NCC NCC report and certificate]
+**[http://people.openmoko.org/tony_tu/GTA02/certificate/NCC NCC report and certificate]
 
 [[Category:GTA02 Hardware]]
